tests/NormalTests/paczka1/small_fuzzy/12227428.err
Error in line 8: PNtOrCVT S77 56,8
Error in line 9: J5ZTyrI S524 5,1
